--- a/investix/ru/account-programs/crypto-master.html
+++ b/investix/ru/account-programs/crypto-master.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-  <title>Expert Program - Investix</title>
-  <link rel="stylesheet" href="../css/style.min.css">
+  <title>Crypto Master - Investix</title>
+  <link rel="stylesheet" href="../../css/style.min.css">
   <!-- Favicon -->
-  <link rel="icon" type="image/svg+xml" href="../img/favicon/favicon.svg">
-  <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="194x194" href="../img/favicon/favicon-194x194.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="../img/favicon/android-chrome-192x192.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon/favicon-16x16.png">
-  <link rel="mask-icon" href="../img/favicon/safari-pinned-tab.svg" color="#cd2122">
-  <link rel="manifest" href="../site.webmanifest">
-  <meta name="msapplication-config" content="../browserconfig.xml">
-  <meta name="msapplication-TileImage" content="../img/favicon/mstile-144x144.png">
+  <link rel="icon" type="image/svg+xml" href="../../img/favicon/favicon.svg">
+  <link rel="apple-touch-icon" sizes="180x180" href="../../apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="../../img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="194x194" href="../../img/favicon/favicon-194x194.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="../../img/favicon/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="../../img/favicon/favicon-16x16.png">
+  <link rel="mask-icon" href="../../img/favicon/safari-pinned-tab.svg" color="#cd2122">
+  <link rel="manifest" href="../../site.webmanifest">
+  <meta name="msapplication-config" content="../../browserconfig.xml">
+  <meta name="msapplication-TileImage" content="../../img/favicon/mstile-144x144.png">
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="theme-color" content="#ffffff">
 </head>
@@ -24,7 +24,7 @@
     <div class="container">
       <div class="header__flex">
         <a class="header__link" href="../index.html">
-          <img class="header__logo" src="../img/logo.svg" alt="Investix">
+          <img class="header__logo" src="../../img/logo.svg" alt="Investix">
         </a>
         <button class="header__toggle  header__toggle--inactive" type="button"></button>
         <nav class="nav">
@@ -34,10 +34,10 @@
               <ul class="nav__sublist">
                 <li><a href="basic.html">Basic Program</a></li>
                 <li><a href="advanced.html">Advanced Program</a></li>
-                <li><a class="nav__active">Expert Program</a></li>
+                <li><a href="expert.html">Expert Program</a></li>
                 <li><a href="pro.html">Pro Program</a></li>
                 <li><a href="ultimate.html">Ultimate Program</a></li>
-                <li><a href="crypto-master.html">Crypto Master</a></li>
+                <li><a class="nav__active">Crypto Master</a></li>
               </ul>
             </li>
             <li>
@@ -72,7 +72,7 @@
   <main class="account-programs">
     <section class="account-programs__title">
       <div class="container">
-        <h1 class="account-programs__name">Expert Program</h1>
+        <h1 class="account-programs__name">Crypto Master</h1>
       </div>
     </section>
     <section class="account-programs__desc">
@@ -80,57 +80,57 @@
         <div class="account-programs__flex">
           <div class="account-programs__left">
             <h2 class="account-programs__name  account-programs__name--small">Professional Program 2018</h2>
-            <p class="account-programs__text">The $3,500 EXPERT Program includes everything in both the BASIC and ADVANCED Programs, with 8 months of mentorship, plus the Star Trader Course and the ability to apply for a funded $160,000 trading account.</p>
-            <p class="account-programs__price">Price <b>$3500</b></p>
+            <p class="account-programs__text">The $1,999 CRYPTO MASTER Program is our premier program. It has all of the tools needed to make it as a professional trader. You receive all of the benefits of the BASIC, ADVANCED, EXPERT, PRO, ULTIMATE programs with 3 months of mentorship, plus the Top Trader Course and the ability to apply for a funded $240,000 trading account.</p>
+            <p class="account-programs__price">Price <b>$1999</b></p>
             <small class="account-programs__guarantee">14-Day Full Money Back Guarantee!</small>
             <a class="button  button--small  button--green  account-programs__button" href="#">Buy Now</a>
           </div>
-          <div class="account-programs__right  account-programs__right--expert"></div>
+          <div class="account-programs__right  account-programs__right--crypto"></div>
         </div>
       </div>
     </section>
-    <section class="account-programs__edge  account-programs__edge--expert">
+    <section class="account-programs__edge  account-programs__edge--crypto">
       <div class="container">
         <div class="account-programs__flex">
-          <div class="account-programs__box  account-programs__box--video">
-            <b>Unlimited Online Videos Lessons Pack 1-4</b>
+          <div class="account-programs__box  account-programs__box--bonus">
+            <b>Introduction to Crypto and Cryptocurrencies</b>
           </div>
-          <div class="account-programs__box  account-programs__box--reviews">
-            <b>Daily Reviews</b>
+          <div class="account-programs__box  account-programs__box--buy">
+            <b>How To Buy, Store And Trade Bitcoin, Etherum, Litecoin</b>
           </div>
-          <div class="account-programs__box  account-programs__box--weekly">
-            <b>Weekly Reviews</b>
+          <div class="account-programs__box  account-programs__box--altcoins">
+            <b>Altcoins and the Cryptocurrency Ecosystem</b>
           </div>
-          <div class="account-programs__box  account-programs__box--room">
-            <b>5 Month Trading Room Access</b>
+          <div class="account-programs__box  account-programs__box--exch">
+            <b>Exchanges, Wallets, and Trading Tools</b>
           </div>
         </div>
         <div class="account-programs__flex">
-          <div class="account-programs__box  account-programs__box--webinar">
-            <b>5 Month Webinar Access</b>
-          </div>
-          <div class="account-programs__box  account-programs__box--demo">
-            <b>Demo Training Account</b>
+          <div class="account-programs__box  account-programs__box--port">
+            <b>Build Your Crypto Portfolio - 1:1 Sessions (2 Sessions)</b>
           </div>
           <div class="account-programs__box  account-programs__box--analysis">
-            <b>Technical Analysis - Expert + Price Action</b>
+            <b>Technical Analysis Advanced Market Scanner - How To Find Breakouts</b>
           </div>
-          <div class="account-programs__box  account-programs__box--learn">
-            <b>Learn Advanced Trading Strategies</b>
+          <div class="account-programs__box  account-programs__box--behind">
+            <b>Behind the Scenes of a Cryptocurrency Exchange: Secrets and Strategy</b>
+          </div>
+          <div class="account-programs__box  account-programs__box--market">
+            <b>Market Psychology</b>
           </div>
         </div>
         <div class="account-programs__flex">
-          <div class="account-programs__box  account-programs__box--session">
-            <b>Weekly Group Mentoring Sessions</b>
+          <div class="account-programs__box  account-programs__box--fund">
+            <b>Fundamental Analysis</b>
           </div>
-          <div class="account-programs__box  account-programs__box--risk">
-            <b>Risk Management Tools</b>
+          <div class="account-programs__box  account-programs__box--live">
+            <b>Live Trading Sessions (3 Months)</b>
           </div>
           <div class="account-programs__box  account-programs__box--signal">
-            <b>Daily Signals</b>
+            <b>Crypto Signals - 6 Months</b>
           </div>
-          <div class="account-programs__box  account-programs__box--bonus">
-            <b><strong>Bonus:</strong> Introduction to Crypto and Cryptocurrencies</b>
+          <div class="account-programs__box  account-programs__box--secret">
+            <b>Crypto Secret Community - 6 Months</b>
           </div>
         </div>
       </div>
@@ -163,7 +163,7 @@
             Program
           </p>
           <a class="button  button--small  button--green  services__button" href="#">Buy Now</a>
-          <a class="button  button--small  button--transparent  services__button">Read More</a>
+          <a class="button  button--small  button--transparent  services__button" href="expert.html">Read More</a>
         </div>
         <div class="services__box  services__box--pro">
           <p class="services__name">
@@ -189,7 +189,7 @@
             Master
           </p>
           <a class="button  button--small  button--green  services__button" href="#">Buy Now</a>
-          <a class="button  button--small  button--transparent  services__button" href="crypto-master.html">Read More</a>
+          <a class="button  button--small  button--transparent  services__button">Read More</a>
         </div>
         <div class="services__box  services__box--desc">
           <h2>Learn Trading Crypto with Investix</h2>
@@ -504,7 +504,7 @@
   <footer class="footer">
     <div class="container">
       <a href="../index.html">
-        <img class="footer__logo" src="../img/logo-white.svg" alt="Investix">
+        <img class="footer__logo" src="../../img/logo-white.svg" alt="Investix">
       </a>
       <div class="footer__flex">
         <ul class="footer__list">
@@ -516,16 +516,16 @@
           <li><b>Funded Accounts</b></li>
           <li><a href="basic.html">Basic Program</a></li>
           <li><a href="advanced.html">Advanced Program</a></li>
-          <li><a class="footer__active">Expert Program</a></li>
+          <li><a href="expert.html">Expert Program</a></li>
           <li><a href="pro.html">Pro Program</a></li>
           <li><a href="ultimate.html">Ultimate Program</a></li>
-          <li><a href="crypto-master.html">Crypto Master</a></li>
+          <li><a class="footer__active">Crypto Master</a></li>
         </ul>
         <ul class="footer__list">
           <li><b>About</b></li>
-          <li><a href="../templates/terms-and-conditions.html">Terms and Conditions</a></li>
-          <li><a href="../templates/privacy-policy.html">Privacy Policy</a></li>
-          <li><a href="../contact-us.html">Contact Us</a></li>
+          <li><a href="../about/terms-and-conditions.html">Terms and Conditions</a></li>
+          <li><a href="../about/privacy-policy.html">Privacy Policy</a></li>
+          <li><a href="../about/contact-us.html">Contact Us</a></li>
         </ul>
         <ul class="footer__list">
           <li><b>Trading Chat Room</b></li>
@@ -552,8 +552,8 @@
       </div>
     </div>
   </footer>
-  <script src="../js/jquery.min.js"></script>
-  <script src="../js/jquery-plugins.js"></script>
-  <script src="../js/main.min.js" async></script>
+  <script src="../../js/jquery.min.js"></script>
+  <script src="../../js/jquery-plugins.js"></script>
+  <script src="../../js/main.min.js" async></script>
 </body>
 </html>
