--- a/investix/ru/account-types.html
+++ b/investix/ru/account-types.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
@@ -365,8 +365,8 @@
         </ul>
         <ul class="footer__list">
           <li><b>About</b></li>
-          <li><a href="../templates/terms-and-conditions.html">Terms and Conditions</a></li>
-          <li><a href="../templates/privacy-policy.html">Privacy Policy</a></li>
+          <li><a href="../about/terms-and-conditions.html">Terms and Conditions</a></li>
+          <li><a href="../about/privacy-policy.html">Privacy Policy</a></li>
           <li><a href="../contact-us.html">Contact Us</a></li>
         </ul>
         <ul class="footer__list">
