--- a/investix/ru/exchange-consulting.html
+++ b/investix/ru/exchange-consulting.html
@@ -115,11 +115,6 @@
       </a>      
       <div class="footer__flex">
         <ul class="footer__list">
-          <li><b>Education</b></li>
-          <li><a href="../education/star-trader-course.html">Star Trader Course</a></li>
-          <li><a href="../education/financial-news.html">Financial News</a></li>
-        </ul>
-        <ul class="footer__list">
           <li><b>Funded Accounts</b></li>
           <li><a href="../account-programs/basic.html">Basic Program</a></li>
           <li><a href="../account-programs/advanced.html">Advanced Program</a></li>
@@ -129,14 +124,19 @@
           <li><a href="../account-programs/crypto-master.html">Crypto Master</a></li>
         </ul>
         <ul class="footer__list">
-          <li><b>About</b></li>
-          <li><a href="../templates/terms-and-conditions.html">Terms and Conditions</a></li>
-          <li><a href="../templates/privacy-policy.html">Privacy Policy</a></li>
-          <li><a href="../contact-us.html">Contact Us</a></li>
+          <li><b>Education</b></li>
+          <li><a href="../education/star-trader-course.html">Star Trader Course</a></li>
+          <li><a href="../education/financial-news.html">Financial News</a></li>
         </ul>
         <ul class="footer__list">
           <li><b>Trading Chat Room</b></li>
           <li><a href="../trading-room.html">Live Trading Chat Room</a></li>
+        </ul>
+        <ul class="footer__list">
+          <li><b>About</b></li>
+          <li><a href="../about/terms-and-conditions.html">Terms and Conditions</a></li>
+          <li><a href="../about/privacy-policy.html">Privacy Policy</a></li>
+          <li><a href="../contact-us.html">Contact Us</a></li>
         </ul>
         <ul class="footer__list">
           <li><b>Contact information</b></li>
