--- a/investix/ru/index.html
+++ b/investix/ru/index.html
@@ -1,54 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <title>Investix</title>
-  <link rel="stylesheet" href="css/style.min.css">
+  <link rel="stylesheet" href="../css/style.min.css">
   <!-- Favicon -->
-  <link rel="icon" type="image/svg+xml" href="img/favicon/favicon.svg">
-  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="194x194" href="img/favicon/favicon-194x194.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="img/favicon/android-chrome-192x192.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
-  <link rel="mask-icon" href="img/favicon/safari-pinned-tab.svg" color="#cd2122">
-  <link rel="manifest" href="site.webmanifest">
-  <meta name="msapplication-config" content="browserconfig.xml">
-  <meta name="msapplication-TileImage" content="img/favicon/mstile-144x144.png">
+  <link rel="icon" type="image/svg+xml" href="../img/favicon/favicon.svg">
+  <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="194x194" href="../img/favicon/favicon-194x194.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="../img/favicon/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon/favicon-16x16.png">
+  <link rel="mask-icon" href="../img/favicon/safari-pinned-tab.svg" color="#cd2122">
+  <link rel="manifest" href="../site.webmanifest">
+  <meta name="msapplication-config" content="../browserconfig.xml">
+  <meta name="msapplication-TileImage" content="../img/favicon/mstile-144x144.png">
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="theme-color" content="#ffffff">
   <!-- Slick -->
-  <link rel="stylesheet" href="js/slick/slick.css"/>
-  <link rel="stylesheet" href="js/slick/slick-theme.css"/>
+  <link rel="stylesheet" href="../js/slick/slick.css"/>
+  <link rel="stylesheet" href="../js/slick/slick-theme.css"/>
 </head>
 <body>
   <header class="header">
     <div class="container">
       <div class="header__flex">
-        <img class="header__logo" src="img/logo.svg" alt="Investix">
+        <img class="header__logo" src="../img/logo.svg" alt="Investix">
         <button class="header__toggle  header__toggle--inactive" type="button"></button>
         <nav class="nav">
           <ul class="nav__list">
             <li>
-              <a href="en/account-programs/account.html">Account Programs</a>
+              <a href="account-programs/account.html">Account Programs</a>
               <ul class="nav__sublist">
-                <li><a href="en/account-programs/basic.html">Basic Program</a></li>
-                <li><a href="en/account-programs/advanced.html">Advanced Program</a></li>
-                <li><a href="en/account-programs/expert.html">Expert Program</a></li>
-                <li><a href="en/account-programs/pro.html">Pro Program</a></li>
-                <li><a href="en/account-programs/ultimate.html">Ultimate Program</a></li>
-                <li><a href="en/account-programs/crypto-master.html">Crypto Master</a></li>
+                <li><a href="account-programs/basic.html">Basic Program</a></li>
+                <li><a href="account-programs/advanced.html">Advanced Program</a></li>
+                <li><a href="account-programs/expert.html">Expert Program</a></li>
+                <li><a href="account-programs/pro.html">Pro Program</a></li>
+                <li><a href="account-programs/ultimate.html">Ultimate Program</a></li>
+                <li><a href="account-programs/crypto-master.html">Crypto Master</a></li>
               </ul>
             </li>
             <li>
               <a href="#">Education</a>
               <ul class="nav__sublist">
-                <li><a href="en/education/star-trader-course.html">Star Trader Course</a></li>
-                <li><a href="en/education/financial-news.html">Financial News</a></li>
+                <li><a href="education/star-trader-course.html">Star Trader Course</a></li>
+                <li><a href="education/financial-news.html">Financial News</a></li>
               </ul>
             </li>
-            <li><a class="nav__chat" href="en/trading-room.html">Chat Room</a></li>
+            <li><a class="nav__chat" href="trading-room.html">Chat Room</a></li>
             <li>
               <div id="google_translate_element"></div>
               <script type="text/javascript">
@@ -110,7 +110,7 @@
             Program
           </p>
           <a class="button  button--small  button--green  services__button" href="#">Buy Now</a>
-          <a class="button  button--small  button--transparent  services__button" href="en/account-programs/basic.html">Read More</a>
+          <a class="button  button--small  button--transparent  services__button" href="account-programs/basic.html">Read More</a>
         </div>
         <div class="services__box  services__box--advanced">
           <p class="services__name">
@@ -118,7 +118,7 @@
             Program
           </p>
           <a class="button  button--small  button--green  services__button" href="#">Buy Now</a>
-          <a class="button  button--small  button--transparent  services__button" href="en/account-programs/advanced.html">Read More</a>
+          <a class="button  button--small  button--transparent  services__button" href="account-programs/advanced.html">Read More</a>
         </div>
         <div class="services__box  services__box--expert">
           <p class="services__name">
@@ -126,7 +126,7 @@
             Program
           </p>
           <a class="button  button--small  button--green  services__button" href="#">Buy Now</a>
-          <a class="button  button--small  button--transparent  services__button" href="en/account-programs/expert.html">Read More</a>
+          <a class="button  button--small  button--transparent  services__button" href="account-programs/expert.html">Read More</a>
         </div>
         <div class="services__box  services__box--pro">
           <p class="services__name">
@@ -134,7 +134,7 @@
             Program
           </p>
           <a class="button  button--small  button--green  services__button" href="#">Buy Now</a>
-          <a class="button  button--small  button--transparent  services__button" href="en/account-programs/pro.html">Read More</a>
+          <a class="button  button--small  button--transparent  services__button" href="account-programs/pro.html">Read More</a>
         </div>
         <div class="services__box  services__box--ultimate">
           <p class="services__name">
@@ -142,7 +142,7 @@
             Program
           </p>
           <a class="button  button--small  button--green  services__button" href="#">Buy Now</a>
-          <a class="button  button--small  button--transparent  services__button" href="en/account-programs/ultimate.html">Read More</a>
+          <a class="button  button--small  button--transparent  services__button" href="account-programs/ultimate.html">Read More</a>
         </div>
       </div>
       <div class="services__flex  services__flex--second">
@@ -152,7 +152,7 @@
             Master
           </p>
           <a class="button  button--small  button--green  services__button" href="#">Buy Now</a>
-          <a class="button  button--small  button--transparent  services__button" href="en/account-programs/crypto-master.html">Read More</a>
+          <a class="button  button--small  button--transparent  services__button" href="account-programs/crypto-master.html">Read More</a>
         </div>
         <div class="services__box  services__box--desc">
           <h2>Learn Trading Crypto with Investix</h2>
@@ -470,31 +470,31 @@
   </section>
   <footer class="footer">
     <div class="container">
-      <img class="footer__logo" src="img/logo-white.svg" alt="Investix">
+      <img class="footer__logo" src="../img/logo-white.svg" alt="Investix">
       <div class="footer__flex">
         <ul class="footer__list">
           <li><b>Education</b></li>
-          <li><a href="en/education/star-trader-course.html">Star Trader Course</a></li>
-          <li><a href="en/education/financial-news.html">Financial News</a></li>
+          <li><a href="education/star-trader-course.html">Star Trader Course</a></li>
+          <li><a href="education/financial-news.html">Financial News</a></li>
         </ul>
         <ul class="footer__list">
           <li><b>Funded Accounts</b></li>
-          <li><a href="en/account-programs/basic.html">Basic Program</a></li>
-          <li><a href="en/account-programs/advanced.html">Advanced Program</a></li>
-          <li><a href="en/account-programs/expert.html">Expert Program</a></li>
-          <li><a href="en/account-programs/pro.html">Pro Program</a></li>
-          <li><a href="en/account-programs/ultimate.html">Ultimate Program</a></li>
-          <li><a href="en/account-programs/crypto-master.html">Crypto Master</a></li>
+          <li><a href="account-programs/basic.html">Basic Program</a></li>
+          <li><a href="account-programs/advanced.html">Advanced Program</a></li>
+          <li><a href="account-programs/expert.html">Expert Program</a></li>
+          <li><a href="account-programs/pro.html">Pro Program</a></li>
+          <li><a href="account-programs/ultimate.html">Ultimate Program</a></li>
+          <li><a href="account-programs/crypto-master.html">Crypto Master</a></li>
         </ul>
         <ul class="footer__list">
           <li><b>About</b></li>
-          <li><a href="en/about/terms-and-conditions.html">Terms and Conditions</a></li>
-          <li><a href="en/about/privacy-policy.html">Privacy Policy</a></li>
-          <li><a href="en/about/contact-us.html">Contact Us</a></li>
+          <li><a href="about/terms-and-conditions.html">Terms and Conditions</a></li>
+          <li><a href="about/privacy-policy.html">Privacy Policy</a></li>
+          <li><a href="about/contact-us.html">Contact Us</a></li>
         </ul>
         <ul class="footer__list">
           <li><b>Trading Chat Room</b></li>
-          <li><a href="en/trading-room.html">Live Trading Chat Room</a></li>
+          <li><a href="trading-room.html">Live Trading Chat Room</a></li>
         </ul>
         <ul class="footer__list">
           <li><b>Contact information</b></li>
@@ -517,10 +517,10 @@
       </div>
     </div>
   </footer>
-  <script src="js/jquery.min.js"></script>
-  <script src="js/jquery-plugins.js"></script>
-  <script src="js/slick/slick.min.js"></script>
-  <script src="js/slider.js"></script>
-  <script src="js/main.min.js" async></script>
+  <script src="../js/jquery.min.js"></script>
+  <script src="../js/jquery-plugins.js"></script>
+  <script src="../js/slick/slick.min.js"></script>
+  <script src="../js/slider.js"></script>
+  <script src="../js/main.min.js" async></script>
 </body>
 </html>
