--- a/investix/ru/our-service.html
+++ b/investix/ru/our-service.html
@@ -152,8 +152,8 @@
         </ul>
         <ul class="footer__list">
           <li><b>About</b></li>
-          <li><a href="../templates/terms-and-conditions.html">Terms and Conditions</a></li>
-          <li><a href="../templates/privacy-policy.html">Privacy Policy</a></li>
+          <li><a href="../about/terms-and-conditions.html">Terms and Conditions</a></li>
+          <li><a href="../about/privacy-policy.html">Privacy Policy</a></li>
           <li><a href="../contact-us.html">Contact Us</a></li>
         </ul>
         <ul class="footer__list">
