--- a/investix/en/about/terms-and-conditions.html
+++ b/investix/en/about/terms-and-conditions.html
@@ -24,7 +24,7 @@
     <div class="container">
       <div class="header__flex">
         <a class="header__link" href="../index.html">
-          <img class="header__logo" src="../img/logo.svg" alt="Investix">
+          <img class="header__logo" src="../../img/logo.svg" alt="Investix">
         </a>
         <button class="header__toggle  header__toggle--inactive" type="button"></button>
         <nav class="nav">
@@ -217,7 +217,7 @@
           <li><b>About</b></li>
           <li><a class="footer__active">Terms and Conditions</a></li>
           <li><a href="privacy-policy.html">Privacy Policy</a></li>
-          <li><a href="../contact-us.html">Contact Us</a></li>
+          <li><a href="contact-us.html">Contact Us</a></li>
         </ul>
         <ul class="footer__list">
           <li><b>Trading Chat Room</b></li>
