--- a/investix/en/account-programs/advanced.html
+++ b/investix/en/account-programs/advanced.html
@@ -3,19 +3,19 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-  <title>Basic Program - Investix</title>
-  <link rel="stylesheet" href="../css/style.min.css">
+  <title>Advanced Program - Investix</title>
+  <link rel="stylesheet" href="../../css/style.min.css">
   <!-- Favicon -->
-  <link rel="icon" type="image/svg+xml" href="../img/favicon/favicon.svg">
-  <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="194x194" href="../img/favicon/favicon-194x194.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="../img/favicon/android-chrome-192x192.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon/favicon-16x16.png">
-  <link rel="mask-icon" href="../img/favicon/safari-pinned-tab.svg" color="#cd2122">
-  <link rel="manifest" href="../site.webmanifest">
-  <meta name="msapplication-config" content="../browserconfig.xml">
-  <meta name="msapplication-TileImage" content="../img/favicon/mstile-144x144.png">
+  <link rel="icon" type="image/svg+xml" href="../../img/favicon/favicon.svg">
+  <link rel="apple-touch-icon" sizes="180x180" href="../../apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="../../img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="194x194" href="../../img/favicon/favicon-194x194.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="../../img/favicon/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="../../img/favicon/favicon-16x16.png">
+  <link rel="mask-icon" href="../../img/favicon/safari-pinned-tab.svg" color="#cd2122">
+  <link rel="manifest" href="../../site.webmanifest">
+  <meta name="msapplication-config" content="../../browserconfig.xml">
+  <meta name="msapplication-TileImage" content="../../img/favicon/mstile-144x144.png">
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="theme-color" content="#ffffff">
 </head>
@@ -23,8 +23,8 @@
   <header class="header">
     <div class="container">
       <div class="header__flex">
-        <a class="header__link" href="../index.html">
-          <img class="header__logo" src="../img/logo.svg" alt="Investix">
+        <a class="header__link" href="../../index.html">
+          <img class="header__logo" src="../../img/logo.svg" alt="Investix">
         </a>
         <button class="header__toggle  header__toggle--inactive" type="button"></button>
         <nav class="nav">
@@ -32,8 +32,8 @@
             <li>
               <a class="nav__active" href="account.html">Account Programs</a>
               <ul class="nav__sublist">
-                <li><a class="nav__active">Basic Program</a></li>
-                <li><a href="advanced.html">Advanced Program</a></li>
+                <li><a href="basic.html">Basic Program</a></li>
+                <li><a class="nav__active">Advanced Program</a></li>
                 <li><a href="expert.html">Expert Program</a></li>
                 <li><a href="pro.html">Pro Program</a></li>
                 <li><a href="ultimate.html">Ultimate Program</a></li>
@@ -72,7 +72,7 @@
   <main class="account-programs">
     <section class="account-programs__title">
       <div class="container">
-        <h1 class="account-programs__name">Basic Program</h1>
+        <h1 class="account-programs__name">Advanced Program</h1>
       </div>
     </section>
     <section class="account-programs__desc">
@@ -80,20 +80,20 @@
         <div class="account-programs__flex">
           <div class="account-programs__left">
             <h2 class="account-programs__name  account-programs__name--small">Professional Program 2018</h2>
-            <p class="account-programs__text">The $500 BASIC program has all you need to get started: Self-Study course, live Trading Chat Room where you can learn from professional traders and follow their trades, a trading book and the eligibility to apply for a funded $14,000 trading account.</p>
-            <p class="account-programs__price">Price <b>$500</b></p>
+            <p class="account-programs__text">The $1,500 ADVANCED Program takes you to the next step in your journey to become a trader. You’ll receive all the benefits of the BASIC program, an excellent day trading course for beginners, plus the following: 1 months of Mentorship, the Star Trader Course, and be eligible to apply for a funded $80,000 trading account.</p>
+            <p class="account-programs__price">Price <b>$1500</b></p>
             <small class="account-programs__guarantee">14-Day Full Money Back Guarantee!</small>
             <a class="button  button--small  button--green  account-programs__button" href="#">Buy Now</a>
           </div>
-          <div class="account-programs__right  account-programs__right--basic"></div>
+          <div class="account-programs__right  account-programs__right--advanced"></div>
         </div>
       </div>
     </section>
-    <section class="account-programs__edge  account-programs__edge--basic">
+    <section class="account-programs__edge  account-programs__edge--advanced">
       <div class="container">
         <div class="account-programs__flex">
           <div class="account-programs__box  account-programs__box--video">
-            <b>Unlimited Online Videos Lessons Pack 1+2</b>
+            <b>Unlimited Online Videos Lessons Pack 1+2+3</b>
           </div>
           <div class="account-programs__box  account-programs__box--reviews">
             <b>Daily Reviews</b>
@@ -102,19 +102,31 @@
             <b>Weekly Reviews</b>
           </div>
           <div class="account-programs__box  account-programs__box--room">
-            <b>1 Month Trading Room Access</b>
+            <b>3 Month Trading Room Access</b>
           </div>
         </div>
         <div class="account-programs__flex">
           <div class="account-programs__box  account-programs__box--webinar">
-            <b>1 Month Webinar Access</b>
+            <b>3 Month Webinar Access</b>
           </div>
           <div class="account-programs__box  account-programs__box--demo">
             <b>Demo Training Account</b>
           </div>
           <div class="account-programs__box  account-programs__box--analysis">
-            <b>Technical Analysis - The Basic</b>
+            <b>Technical Analysis - The Basic + Advanced</b>
           </div>
+          <div class="account-programs__box  account-programs__box--learn">
+            <b>Learn Advanced Trading Strategies</b>
+          </div>
+        </div>
+        <div class="account-programs__flex">
+          <div class="account-programs__box  account-programs__box--risk">
+            <b>Risk Management Tools</b>
+          </div>
+          <div class="account-programs__box  account-programs__box--bonus">
+            <b><strong>Bonus:</strong> Introduction to Crypto and Cryptocurrencies</b>
+          </div>
+          <div class="account-programs__box  account-programs__box--hidden"></div>
           <div class="account-programs__box  account-programs__box--hidden"></div>
         </div>
       </div>
@@ -131,7 +143,7 @@
             Program
           </p>
           <a class="button  button--small  button--green  services__button" href="#">Buy Now</a>
-          <a class="button  button--small  button--transparent  services__button">Read More</a>
+          <a class="button  button--small  button--transparent  services__button" href="basic.html">Read More</a>
         </div>
         <div class="services__box  services__box--advanced">
           <p class="services__name">
@@ -139,7 +151,7 @@
             Program
           </p>
           <a class="button  button--small  button--green  services__button" href="#">Buy Now</a>
-          <a class="button  button--small  button--transparent  services__button" href="advanced.html">Read More</a>
+          <a class="button  button--small  button--transparent  services__button">Read More</a>
         </div>
         <div class="services__box  services__box--expert">
           <p class="services__name">
@@ -487,8 +499,8 @@
   </section>
   <footer class="footer">
     <div class="container">
-      <a href="../index.html">
-        <img class="footer__logo" src="../img/logo-white.svg" alt="Investix">
+      <a href="../../index.html">
+        <img class="footer__logo" src="../../img/logo-white.svg" alt="Investix">
       </a>
       <div class="footer__flex">
         <ul class="footer__list">
@@ -498,8 +510,8 @@
         </ul>
         <ul class="footer__list">
           <li><b>Funded Accounts</b></li>
-          <li><a class="footer__active">Basic Program</a></li>
-          <li><a href="advanced.html">Advanced Program</a></li>
+          <li><a href="basic.html">Basic Program</a></li>
+          <li><a class="footer__active">Advanced Program</a></li>
           <li><a href="expert.html">Expert Program</a></li>
           <li><a href="pro.html">Pro Program</a></li>
           <li><a href="ultimate.html">Ultimate Program</a></li>
@@ -507,9 +519,9 @@
         </ul>
         <ul class="footer__list">
           <li><b>About</b></li>
-          <li><a href="../templates/terms-and-conditions.html">Terms and Conditions</a></li>
-          <li><a href="../templates/privacy-policy.html">Privacy Policy</a></li>
-          <li><a href="../contact-us.html">Contact Us</a></li>
+          <li><a href="../about/terms-and-conditions.html">Terms and Conditions</a></li>
+          <li><a href="../about/privacy-policy.html">Privacy Policy</a></li>
+          <li><a href="../about/contact-us.html">Contact Us</a></li>
         </ul>
         <ul class="footer__list">
           <li><b>Trading Chat Room</b></li>
@@ -517,6 +529,7 @@
         </ul>
         <ul class="footer__list">
           <li><b>Contact information</b></li>
+          <!-- <li><a class="footer__phone" href="tel:+442038290032">+442038290032</a></li> -->
           <li><a class="footer__email" href="mailto:info@investix.com">info@investix.com</a></li>
           <li><a class="footer__home" href="https://www.investix.com">www.investix.com</a></li>
         </ul>
@@ -536,8 +549,8 @@
       </div>
     </div>
   </footer>
-  <script src="../js/jquery.min.js"></script>
-  <script src="../js/jquery-plugins.js"></script>
-  <script src="../js/main.min.js" async></script>
+  <script src="../../js/jquery.min.js"></script>
+  <script src="../../js/jquery-plugins.js"></script>
+  <script src="../../js/main.min.js" async></script>
 </body>
 </html>
