--- a/investix/ru/account-programs/advanced.html
+++ b/investix/ru/account-programs/advanced.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-  <title>Ultimate - Investix</title>
-  <link rel="stylesheet" href="../css/style.min.css">
+  <title>Advanced Program - Investix</title>
+  <link rel="stylesheet" href="../../css/style.min.css">
   <!-- Favicon -->
-  <link rel="icon" type="image/svg+xml" href="../img/favicon/favicon.svg">
-  <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="194x194" href="../img/favicon/favicon-194x194.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="../img/favicon/android-chrome-192x192.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon/favicon-16x16.png">
-  <link rel="mask-icon" href="../img/favicon/safari-pinned-tab.svg" color="#cd2122">
-  <link rel="manifest" href="../site.webmanifest">
-  <meta name="msapplication-config" content="../browserconfig.xml">
-  <meta name="msapplication-TileImage" content="../img/favicon/mstile-144x144.png">
+  <link rel="icon" type="image/svg+xml" href="../../img/favicon/favicon.svg">
+  <link rel="apple-touch-icon" sizes="180x180" href="../../apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="../../img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="194x194" href="../../img/favicon/favicon-194x194.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="../../img/favicon/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="../../img/favicon/favicon-16x16.png">
+  <link rel="mask-icon" href="../../img/favicon/safari-pinned-tab.svg" color="#cd2122">
+  <link rel="manifest" href="../../site.webmanifest">
+  <meta name="msapplication-config" content="../../browserconfig.xml">
+  <meta name="msapplication-TileImage" content="../../img/favicon/mstile-144x144.png">
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="theme-color" content="#ffffff">
 </head>
@@ -24,7 +24,7 @@
     <div class="container">
       <div class="header__flex">
         <a class="header__link" href="../index.html">
-          <img class="header__logo" src="../img/logo.svg" alt="Investix">
+          <img class="header__logo" src="../../img/logo.svg" alt="Investix">
         </a>
         <button class="header__toggle  header__toggle--inactive" type="button"></button>
         <nav class="nav">
@@ -33,10 +33,10 @@
               <a class="nav__active" href="account.html">Account Programs</a>
               <ul class="nav__sublist">
                 <li><a href="basic.html">Basic Program</a></li>
-                <li><a href="advanced.html">Advanced Program</a></li>
+                <li><a class="nav__active">Advanced Program</a></li>
                 <li><a href="expert.html">Expert Program</a></li>
                 <li><a href="pro.html">Pro Program</a></li>
-                <li><a class="nav__active">Ultimate Program</a></li>
+                <li><a href="ultimate.html">Ultimate Program</a></li>
                 <li><a href="crypto-master.html">Crypto Master</a></li>
               </ul>
             </li>
@@ -72,7 +72,7 @@
   <main class="account-programs">
     <section class="account-programs__title">
       <div class="container">
-        <h1 class="account-programs__name">Ultimate Program</h1>
+        <h1 class="account-programs__name">Advanced Program</h1>
       </div>
     </section>
     <section class="account-programs__desc">
@@ -80,20 +80,20 @@
         <div class="account-programs__flex">
           <div class="account-programs__left">
             <h2 class="account-programs__name  account-programs__name--small">Professional Program 2018</h2>
-            <p class="account-programs__text">The $5,999 ULTIMATE Program is our premier program. It has all of the tools needed to make it as a professional trader. You receive all of the benefits of the BASIC, ADVANCED, EXPERT, PRO programs with 3 months of mentorship, plus the Top Trader Course and the ability to apply for a funded $240,000 trading account.</p>
-            <p class="account-programs__price">Price <b>$5999</b></p>
+            <p class="account-programs__text">The $1,500 ADVANCED Program takes you to the next step in your journey to become a trader. You’ll receive all the benefits of the BASIC program, an excellent day trading course for beginners, plus the following: 1 months of Mentorship, the Star Trader Course, and be eligible to apply for a funded $80,000 trading account.</p>
+            <p class="account-programs__price">Price <b>$1500</b></p>
             <small class="account-programs__guarantee">14-Day Full Money Back Guarantee!</small>
             <a class="button  button--small  button--green  account-programs__button" href="#">Buy Now</a>
           </div>
-          <div class="account-programs__right  account-programs__right--ultimate"></div>
+          <div class="account-programs__right  account-programs__right--advanced"></div>
         </div>
       </div>
     </section>
-    <section class="account-programs__edge  account-programs__edge--ultimate">
+    <section class="account-programs__edge  account-programs__edge--advanced">
       <div class="container">
         <div class="account-programs__flex">
           <div class="account-programs__box  account-programs__box--video">
-            <b>Unlimited Online Videos Lessons All Packages</b>
+            <b>Unlimited Online Videos Lessons Pack 1+2+3</b>
           </div>
           <div class="account-programs__box  account-programs__box--reviews">
             <b>Daily Reviews</b>
@@ -102,50 +102,32 @@
             <b>Weekly Reviews</b>
           </div>
           <div class="account-programs__box  account-programs__box--room">
-            <b>1 Year Trading Room Access</b>
+            <b>3 Month Trading Room Access</b>
           </div>
         </div>
         <div class="account-programs__flex">
           <div class="account-programs__box  account-programs__box--webinar">
-            <b>1 Year Webinar Access</b>
+            <b>3 Month Webinar Access</b>
           </div>
           <div class="account-programs__box  account-programs__box--demo">
             <b>Demo Training Account</b>
           </div>
           <div class="account-programs__box  account-programs__box--analysis">
-            <b>Technical Analysis + Price Action + Turtle Trading</b>
+            <b>Technical Analysis - The Basic + Advanced</b>
           </div>
           <div class="account-programs__box  account-programs__box--learn">
             <b>Learn Advanced Trading Strategies</b>
           </div>
         </div>
         <div class="account-programs__flex">
-          <div class="account-programs__box  account-programs__box--session">
-            <b>Weekly Group Mentoring Sessions</b>
-          </div>
           <div class="account-programs__box  account-programs__box--risk">
             <b>Risk Management Tools</b>
-          </div>
-          <div class="account-programs__box  account-programs__box--signal">
-            <b>Daily Signals</b>
-          </div>
-          <div class="account-programs__box  account-programs__box--live">
-            <b>Three Live 3-hours Online Sessions 1:1</b>
-          </div>
-        </div>
-        <div class="account-programs__flex">
-          <div class="account-programs__box  account-programs__box--pers">
-            <b>Personal Mentoring</b>
-          </div>
-          <div class="account-programs__box  account-programs__box--market">
-            <b>Market Psychology</b>
-          </div>
-          <div class="account-programs__box  account-programs__box--fund">
-            <b>Fundamental Analysis</b>
           </div>
           <div class="account-programs__box  account-programs__box--bonus">
             <b><strong>Bonus:</strong> Introduction to Crypto and Cryptocurrencies</b>
           </div>
+          <div class="account-programs__box  account-programs__box--hidden"></div>
+          <div class="account-programs__box  account-programs__box--hidden"></div>
         </div>
       </div>
     </section>
@@ -169,7 +151,7 @@
             Program
           </p>
           <a class="button  button--small  button--green  services__button" href="#">Buy Now</a>
-          <a class="button  button--small  button--transparent  services__button" href="advanced.html">Read More</a>
+          <a class="button  button--small  button--transparent  services__button">Read More</a>
         </div>
         <div class="services__box  services__box--expert">
           <p class="services__name">
@@ -193,7 +175,7 @@
             Program
           </p>
           <a class="button  button--small  button--green  services__button" href="#">Buy Now</a>
-          <a class="button  button--small  button--transparent  services__button">Read More</a>
+          <a class="button  button--small  button--transparent  services__button" href="ultimate.html">Read More</a>
         </div>
       </div>
       <div class="services__flex  services__flex--second">
@@ -518,7 +500,7 @@
   <footer class="footer">
     <div class="container">
       <a href="../index.html">
-        <img class="footer__logo" src="../img/logo-white.svg" alt="Investix">
+        <img class="footer__logo" src="../../img/logo-white.svg" alt="Investix">
       </a>
       <div class="footer__flex">
         <ul class="footer__list">
@@ -529,17 +511,17 @@
         <ul class="footer__list">
           <li><b>Funded Accounts</b></li>
           <li><a href="basic.html">Basic Program</a></li>
-          <li><a href="advanced.html">Advanced Program</a></li>
+          <li><a class="footer__active">Advanced Program</a></li>
           <li><a href="expert.html">Expert Program</a></li>
           <li><a href="pro.html">Pro Program</a></li>
-          <li><a class="footer__active">Ultimate Program</a></li>
+          <li><a href="ultimate.html">Ultimate Program</a></li>
           <li><a href="crypto-master.html">Crypto Master</a></li>
         </ul>
         <ul class="footer__list">
           <li><b>About</b></li>
-          <li><a href="../templates/terms-and-conditions.html">Terms and Conditions</a></li>
-          <li><a href="../templates/privacy-policy.html">Privacy Policy</a></li>
-          <li><a href="../contact-us.html">Contact Us</a></li>
+          <li><a href="../about/terms-and-conditions.html">Terms and Conditions</a></li>
+          <li><a href="../about/privacy-policy.html">Privacy Policy</a></li>
+          <li><a href="../about/contact-us.html">Contact Us</a></li>
         </ul>
         <ul class="footer__list">
           <li><b>Trading Chat Room</b></li>
@@ -547,6 +529,7 @@
         </ul>
         <ul class="footer__list">
           <li><b>Contact information</b></li>
+          <!-- <li><a class="footer__phone" href="tel:+442038290032">+442038290032</a></li> -->
           <li><a class="footer__email" href="mailto:info@investix.com">info@investix.com</a></li>
           <li><a class="footer__home" href="https://www.investix.com">www.investix.com</a></li>
         </ul>
@@ -566,8 +549,8 @@
       </div>
     </div>
   </footer>
-  <script src="../js/jquery.min.js"></script>
-  <script src="../js/jquery-plugins.js"></script>
-  <script src="../js/main.min.js" async></script>
+  <script src="../../js/jquery.min.js"></script>
+  <script src="../../js/jquery-plugins.js"></script>
+  <script src="../../js/main.min.js" async></script>
 </body>
 </html>
