--- a/investix/ru/education/financial-news.html
+++ b/investix/ru/education/financial-news.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <title>Financial News - Investix</title>
-  <link rel="stylesheet" href="../css/style.min.css">
+  <link rel="stylesheet" href="../../css/style.min.css">
   <!-- Favicon -->
-  <link rel="icon" type="image/svg+xml" href="../img/favicon/favicon.svg">
-  <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="194x194" href="../img/favicon/favicon-194x194.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="../img/favicon/android-chrome-192x192.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon/favicon-16x16.png">
-  <link rel="mask-icon" href="../img/favicon/safari-pinned-tab.svg" color="#cd2122">
-  <link rel="manifest" href="../site.webmanifest">
-  <meta name="msapplication-config" content="../browserconfig.xml">
-  <meta name="msapplication-TileImage" content="../img/favicon/mstile-144x144.png">
+  <link rel="icon" type="image/svg+xml" href="../../img/favicon/favicon.svg">
+  <link rel="apple-touch-icon" sizes="180x180" href="../../apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="../../img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="194x194" href="../../img/favicon/favicon-194x194.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="../../img/favicon/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="../../img/favicon/favicon-16x16.png">
+  <link rel="mask-icon" href="../../img/favicon/safari-pinned-tab.svg" color="#cd2122">
+  <link rel="manifest" href="../../site.webmanifest">
+  <meta name="msapplication-config" content="../../browserconfig.xml">
+  <meta name="msapplication-TileImage" content="../../img/favicon/mstile-144x144.png">
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="theme-color" content="#ffffff">
 </head>
@@ -24,7 +24,7 @@
     <div class="container">
       <div class="header__flex">
         <a class="header__link" href="../index.html">
-          <img class="header__logo" src="../img/logo.svg" alt="Investix">
+          <img class="header__logo" src="../../img/logo.svg" alt="Investix">
         </a>
         <button class="header__toggle  header__toggle--inactive" type="button"></button>
         <nav class="nav">
@@ -236,7 +236,7 @@
   <footer class="footer">
     <div class="container">
       <a href="../index.html">
-        <img class="footer__logo" src="../img/logo-white.svg" alt="Investix">
+        <img class="footer__logo" src="../../img/logo-white.svg" alt="Investix">
       </a>
       <div class="footer__flex">
         <ul class="footer__list">
@@ -246,18 +246,18 @@
         </ul>
         <ul class="footer__list">
           <li><b>Funded Accounts</b></li>
-          <li><a href="account-programs/basic.html">Basic Program</a></li>
-          <li><a href="account-programs/advanced.html">Advanced Program</a></li>
-          <li><a href="account-programs/expert.html">Expert Program</a></li>
-          <li><a href="account-programs/pro.html">Pro Program</a></li>
-          <li><a href="account-programs/ultimate.html">Ultimate Program</a></li>
-          <li><a href="account-programs/crypto-master.html">Crypto Master</a></li>
+          <li><a href="../account-programs/basic.html">Basic Program</a></li>
+          <li><a href="../account-programs/advanced.html">Advanced Program</a></li>
+          <li><a href="../account-programs/expert.html">Expert Program</a></li>
+          <li><a href="../account-programs/pro.html">Pro Program</a></li>
+          <li><a href="../account-programs/ultimate.html">Ultimate Program</a></li>
+          <li><a href="../account-programs/crypto-master.html">Crypto Master</a></li>
         </ul>
         <ul class="footer__list">
           <li><b>About</b></li>
-          <li><a href="templates/terms-and-conditions.html">Terms and Conditions</a></li>
-          <li><a href="templates/privacy-policy.html">Privacy Policy</a></li>
-          <li><a href="contact-us.html">Contact Us</a></li>
+          <li><a href="../about/terms-and-conditions.html">Terms and Conditions</a></li>
+          <li><a href="../about/privacy-policy.html">Privacy Policy</a></li>
+          <li><a href="../about/contact-us.html">Contact Us</a></li>
         </ul>
         <ul class="footer__list">
           <li><b>Trading Chat Room</b></li>
@@ -284,8 +284,8 @@
       </div>
     </div>
   </footer>
-  <script src="../js/jquery.min.js"></script>
-  <script src="../js/jquery-plugins.js"></script>
-  <script src="../js/main.min.js" async></script>
+  <script src="../../js/jquery.min.js"></script>
+  <script src="../../js/jquery-plugins.js"></script>
+  <script src="../../js/main.min.js" async></script>
 </body>
 </html>
